<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QR-i</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register"></string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="register">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="firstName">Nama Depan</string>
    <string name="lastName">Nama Belakang</string>
    <string name="phone">Nomor Handphone</string>
    <string name="rePassword">Konfirmasi Password</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="city">Kota</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="menu_check_quota">Cek Kuota</string>
    <string name="menu_logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="inputAmount">Masukkan Jumlah Kertas</string>
    <string name="generate">Generate</string>
	<string-array name="city">
        <item>Semarang</item>
        <item>Yogyakarta</item>
        <item>Surabaya</item>
        <item>Jakarta</item>
        <item>Surakarta</item>
        <item>Malang</item>
        <item>Bandung</item>
    </string-array>

    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_app_picker_name">Applications</string>
    <string name="zxing_bookmark_picker_name">Bookmarks</string>
    <string name="zxing_button_add_calendar">Add to calendar</string>
    <string name="zxing_button_add_contact">Add contact</string>
    <string name="zxing_button_book_search">Book Search</string>
    <string name="zxing_button_cancel">Cancel</string>
    <string name="zxing_button_custom_product_search">Custom search</string>
    <string name="zxing_button_dial">Dial number</string>
    <string name="zxing_button_email">Send email</string>
    <string name="zxing_button_get_directions">Get directions</string>
    <string name="zxing_button_mms">Send MMS</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_button_open_browser">Open browser</string>
    <string name="zxing_button_product_search">Product search</string>
    <string name="zxing_button_search_book_contents">Search contents</string>
    <string name="zxing_button_share_app">Application</string>
    <string name="zxing_button_share_bookmark">Bookmark</string>
    <string name="zxing_button_share_by_email">Share via email</string>
    <string name="zxing_button_share_by_sms">Share via SMS</string>
    <string name="zxing_button_share_clipboard">Clipboard</string>
    <string name="zxing_button_share_contact">Contact</string>
    <string name="zxing_button_show_map">Show map</string>
    <string name="zxing_button_sms">Send SMS</string>
    <string name="zxing_button_web_search">Web search</string>
    <string name="zxing_button_wifi">Connect to Network</string>
    <string name="zxing_contents_contact">Contact info</string>
    <string name="zxing_contents_email">Email address</string>
    <string name="zxing_contents_location">Geographic coordinates</string>
    <string name="zxing_contents_phone">Phone number</string>
    <string name="zxing_contents_sms">SMS address</string>
    <string name="zxing_contents_text">Plain text</string>
    <string name="zxing_history_clear_text">Clear history</string>
    <string name="zxing_history_clear_one_history_text">Clear</string>
    <string name="zxing_history_email_title">Barcode Scanner history</string>
    <string name="zxing_history_empty">Empty</string>
    <string name="zxing_history_empty_detail">No barcode scans have been recorded</string>
    <string name="zxing_history_send">Send history</string>
    <string name="zxing_history_title">History</string>
    <string name="zxing_menu_encode_mecard">Use MECARD</string>
    <string name="zxing_menu_encode_vcard">Use vCard</string>
    <string name="zxing_menu_help">Help</string>
    <string name="zxing_menu_history">History</string>
    <string name="zxing_menu_settings">Settings</string>
    <string name="zxing_menu_share">Share</string>
    <string name="zxing_msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_format">Format</string>
    <string name="zxing_msg_default_meta">Metadata</string>
    <string name="zxing_msg_default_mms_subject">Hi</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="zxing_msg_default_time">Time</string>
    <string name="zxing_msg_default_type">Type</string>
    <string name="zxing_msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="zxing_msg_error">Error</string>
    <string name="zxing_msg_google_books">Google</string>
    <string name="zxing_msg_google_product">Google</string>
    <string name="zxing_msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="zxing_msg_invalid_value">Invalid value</string>
    <string name="zxing_msg_redirect">Redirect</string>
    <string name="zxing_msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="zxing_msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="zxing_msg_sbc_no_page_returned">No page returned</string>
    <string name="zxing_msg_sbc_page">Page</string>
    <string name="zxing_msg_sbc_results">Results</string>
    <string name="zxing_msg_sbc_searching_book">Searching book\u2026</string>
    <string name="zxing_msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="zxing_msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="zxing_msg_share_text">Or type some text and press Enter</string>
    <string name="zxing_msg_sure">Are you sure?</string>
    <string name="zxing_msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="zxing_preferences_actions_title">When a barcode is found\u2026</string>
    <string name="zxing_preferences_auto_focus_title">Use auto focus</string>
    <string name="zxing_preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="zxing_preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="zxing_preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="zxing_preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="zxing_preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="zxing_preferences_custom_product_search_title">Custom search URL</string>
    <string name="zxing_preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="zxing_preferences_decode_1D_product_title">1D Product</string>
    <string name="zxing_preferences_decode_Aztec_title">Aztec</string>
    <string name="zxing_preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="zxing_preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="zxing_preferences_decode_QR_title">QR Codes</string>
    <string name="zxing_preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="zxing_preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="zxing_preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="zxing_preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="zxing_preferences_disable_exposure_title">No exposure</string>
    <string name="zxing_preferences_disable_metering_title">No metering</string>
    <string name="zxing_preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="zxing_preferences_front_light_title">Use front light</string>
    <string name="zxing_preferences_front_light_auto">Automatic</string>
    <string name="zxing_preferences_front_light_off">Off</string>
    <string name="zxing_preferences_front_light_on">On</string>
    <string name="zxing_preferences_general_title">General settings</string>
    <string name="zxing_preferences_invert_scan_title">Invert scan</string>
    <string name="zxing_preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="zxing_preferences_name">Settings</string>
    <string name="zxing_preferences_orientation_title">No automatic rotation</string>
    <string name="zxing_preferences_play_beep_title">Beep</string>
    <string name="zxing_preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="zxing_preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="zxing_preferences_result_title">Result settings</string>
    <string name="zxing_preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="zxing_preferences_search_country">Search country</string>
    <string name="zxing_preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="zxing_preferences_supplemental_title">Retrieve more info</string>
    <string name="zxing_preferences_vibrate_title">Vibrate</string>
    <string name="zxing_result_address_book">Found contact info</string>
    <string name="zxing_result_calendar">Found calendar event</string>
    <string name="zxing_result_email_address">Found email address</string>
    <string name="zxing_result_geo">Found geographic coordinates</string>
    <string name="zxing_result_isbn">Found book</string>
    <string name="zxing_result_product">Found product</string>
    <string name="zxing_result_sms">Found SMS address</string>
    <string name="zxing_result_tel">Found phone number</string>
    <string name="zxing_result_text">Found plain text</string>
    <string name="zxing_result_uri">Found URL</string>
    <string name="zxing_result_wifi">Found WLAN Configuration</string>
    <string name="zxing_sbc_name">Google Book Search</string>
    <string name="zxing_wifi_changing_network">Requesting connection to network\u2026</string>
</resources>
