<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:background="@color/whiteGray"
    tools:context="com.qr_i.RegisterActivity" >
	
    <ScrollView
    android:id="@+id/horizontalScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="970dp"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/email" 
            android:textSize="@dimen/textsize_micro"/>

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" 
            android:background="@drawable/bg_edittext_register">
			
            <requestFocus />
        </EditText>
        
		<TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/username" 
            android:textSize="@dimen/textsize_micro"/>
		
        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@drawable/bg_edittext_register"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/password" 
            android:textSize="@dimen/textsize_micro"/>
        
        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" 
            android:background="@drawable/bg_edittext_register" />
		
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/rePassword" 
            android:textSize="@dimen/textsize_micro"
            />
        
        <EditText
            android:id="@+id/edRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rePassword"
            android:ems="10"
            android:inputType="textPassword" 
            android:background="@drawable/bg_edittext_register"/>
		
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/firstName" 
            android:textSize="@dimen/textsize_micro"/>
        
        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:ems="10"
            android:inputType="textPersonName" 
            android:background="@drawable/bg_edittext_register"/>
		
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/lastName" 
            android:textSize="@dimen/textsize_micro"/>
        
        <EditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName" 
            android:background="@drawable/bg_edittext_register"/>
		
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/phone" 
            android:textSize="@dimen/textsize_micro"/>
        
        <EditText
            android:id="@+id/edPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" 
            android:background="@drawable/bg_edittext_register"/>
        
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/dob" 
            android:textSize="@dimen/textsize_micro"/>
        
        <EditText
            android:id="@+id/edDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dob"
            style="@android:style/Widget.Holo.Spinner" 
            android:background="@drawable/bg_edittext_register"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:text="@string/gender" 
            android:textSize="@dimen/textsize_micro"/>

      
            <RadioGroup
                android:id="@+id/rbGroupGender"
    			android:layout_width="fill_parent"
   				android:layout_height="wrap_content"
   				android:orientation="horizontal">
            
        		<RadioButton
	            	android:id="@+id/radioMale"
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:layout_alignLeft="@+id/textView8"
	            	android:layout_below="@+id/textView8"
	            	android:text="@string/male"
	            	android:textSize="@dimen/textsize_micro" 
	            	android:onClick="onRBGenderClicked"
	            	android:height="10dp"
            		/>

	        	<RadioButton
	            	android:id="@+id/radioFemale"
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:text="@string/female" 
	            	android:textSize="@dimen/textsize_micro" 
	            	android:onClick="onRBGenderClicked"
	            	android:height="10dp"
            		/>
	        	
	        </RadioGroup>
        	
		
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" 
            android:paddingBottom="@dimen/padding_text_bottom"
            android:paddingTop="@dimen/padding_text_top"
            android:textSize="@dimen/textsize_micro"
            />

        <Spinner
            android:id="@+id/spinCity"
            style="@style/DropDownListView.Customapptheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:layout_marginTop="22dp"
	        android:background="@drawable/buttonshape"
	        android:shadowColor="#A8A8A8"
	        android:shadowDx="0"
	        android:shadowDy="0"
	        android:shadowRadius="5"
	        android:text="@string/submit"
	        android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/edHidenCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:ems="10" />

        <EditText
            android:id="@+id/edHidenGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:ems="10" />
        
        <EditText
            android:id="@+id/registerErrorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:ems="10" />

    </LinearLayout>

  </ScrollView>
</LinearLayout>