<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingBottom="50dp"
    android:paddingTop="50dp"
    android:background="@color/materialWhite"
    tools:context="com.qr_i.LoginActivity" >

    <EditText
        android:id="@+id/loginErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qri_login_small" />

    <EditText
        android:id="@+id/edLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext_login"
        android:hint="@string/username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:background="@drawable/bg_edittext_login"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/lblRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:clickable="true"
        android:onClick="lblRegisterOnClick"
        android:text="@string/register"
        android:textColor="@color/materialOrange" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>