<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@color/whiteGray"
    android:weightSum="1.0">
    
    <EditText
        android:id="@+id/edAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" 
        android:background="@drawable/bg_edittext_register"
        android:hint="@string/inputAmount">

        <requestFocus />
    </EditText>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteGray"
        android:orientation="horizontal" >
        
    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
	        android:layout_height="30dp"
	        android:layout_weight=".5"
	        android:layout_marginTop="22dp"
	        android:background="@drawable/buttonshape"
	        android:shadowColor="#A8A8A8"
	        android:shadowDx="0"
	        android:shadowDy="0"
	        android:shadowRadius="5"
	        android:text="@string/submit"
	        android:textColor="#FFFFFF" />
    
    </LinearLayout>
	
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/orangekmu"
        android:gravity="top">
        <!--
        <SurfaceView android:id="@+id/preview_view"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_centerInParent="true"/>
        	<com.google.zxing.client.android.ViewfinderView
	            android:id="@+id/viewfinder_view"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            />
       !-->
        <include layout="@layout/capture_layout"/>
    </FrameLayout>
     
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/whiteGray"
        android:gravity="bottom">"

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:layout_marginTop="22dp"
	        android:background="@drawable/buttonshape"
	        android:shadowColor="#A8A8A8"
	        android:shadowDx="0"
	        android:shadowDy="0"
	        android:shadowRadius="5"
	        android:text="@string/generate"
	        android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
